--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,14 @@
               <div class="row">
                 <div class="col-lg-8 row m-0 p-0">
 
+                  <div class="iq-card-footer" v-if="errorMessage">
+                      <div class="alert alert-danger text-bold ml-3 mr-3" role="alert">
+                          <strong>
+                              {{errorMessage}}
+                          </strong>
+                      </div>
+                  </div>
+
                   <!-- Import the create post form -->
                   <%- include ('partials/create-post.ejs') %>
 
@@ -158,7 +166,8 @@
             newPost: {
               text: "",
               image: null
-            }
+            },
+            errorMessage: null
           },
           created: function () {
             // Initialize Socket Listeners
@@ -212,6 +221,8 @@
             },
             createPost: async function () {
               try {
+                this.errorMessage = null;
+
                 // Save new post to DB
                 let response = await axios.post(`/api/posts`, {
                   contentText: this.newPost.text
@@ -227,6 +238,7 @@
 
               } catch (error) {
                 console.error(error);
+                this.errorMessage = error.response.data.error;
               }
             },
             createComment: async function (postId) {
