clean up console logs

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -172,7 +172,7 @@
                             }
                         },
                         updateUser: async function () {
-                            console.log("Updating User...");
+                            // console.log("Updating User...");
                             try {
                                 const form = document.getElementById("account-form")
                                 const formData = new FormData(form)
@@ -190,7 +190,7 @@
 
                         },
                         resetForm: function () {
-                            console.log("Resetting Form...")
+                            // console.log("Resetting Form...")
                             this.errorMessage = null;
 
                             this.updateForm.imageFile = null;
