--- a/views/partials/create-comment.ejs
+++ b/views/partials/create-comment.ejs
@@ -2,8 +2,8 @@
     <li v-for="comment in post.comments" class="mb-2">
         <div class="d-flex flex-wrap">
             <div class="user-img">
-            <img src="/images/profile.png" alt="userimg"
-                class="avatar-35 rounded-circle img-fluid">
+                <img v-bind:src="comment.userId.profilePicture ? '/uploads/' + comment.userId.profilePicture : '/images/profile.png'"
+                    alt="userimg" class="avatar-35 rounded-circle img-fluid">
             </div>
             <div class="comment-data-block ml-3">
                 <h6>{{comment.userId.firstName}} {{comment.userId.lastName}}</h6>
@@ -11,14 +11,16 @@
             </div>
         </div>
     </li>
-  </ul>
+</ul>
 
 <!-- Reply Box -->
 <!-- I change this to a div instead of a form to stick with our no-forms idea.
     This may be where we need to fix the alignment of the reply button -->
 <div class="comment-text d-flex align-items-center mt-3" style="position: relative;">
-    <input type="text" v-bind:id="post._id" class="form-control rounded" placeholder="Reply..."  style="padding-right: 130px;">
+    <input type="text" v-bind:id="post._id" class="form-control rounded" placeholder="Reply..."
+        style="padding-right: 130px;">
     <div class="comment-attagement d-flex">
-      <button type="submit" id="createComment" class="btn btn-light d-block mr-1" v-on:click="createComment(post._id)">Reply</button>
+        <button type="submit" id="createComment" class="btn btn-light d-block mr-1"
+            v-on:click="createComment(post._id)">Reply</button>
     </div>
 </div>
