--- a/views/partials/create-post.ejs
+++ b/views/partials/create-post.ejs
@@ -9,7 +9,7 @@
             <!-- <form action="#"> -->
             <div class="d-flex align-items-center">
                 <div class="user-img">
-                    <img v-bind:src="user.profilePicture ? '/uploads/' + user.profilePicture : '/images/profile.png'"
+                    <img v-bind:src="user && user.profilePicture ? '/uploads/' + user.profilePicture : '/images/profile.png'"
                         alt="userimg" class="avatar-60 rounded-circle">
                 </div>
                 <div class="post-text ml-3 w-100">
