--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
                                 <div class="dropdown">
                                   <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                                     aria-expanded="false" role="button">
-                                    <i class="ri-more-fill"></i>
+                                    <i class="ri-more-fill btn"></i>
                                   </span>
                                   <div class="dropdown-menu m-0 p-0">
                                     <a class="dropdown-item p-3" v-bind:href="`/posts/${post._id}/edit`">
@@ -72,7 +72,7 @@
                                       </div>
                                     </a>
                                     <a class="dropdown-item p-3" type="button" data-toggle="modal"
-                                      data-target="#deleteModal" @click="postToDelete = post._id">
+                                      data-target="#deletePostModal" @click="postToDelete = post._id">
                                       <div class="d-flex align-items-top">
                                         <div class="icon font-size-20"><i class="ri-close-circle-line"></i></div>
                                         <div class="data ml-2">
@@ -116,13 +116,13 @@
                       <image src="/images/spinner_transparent.gif" style="margin: 0 auto;"></image>
                     </div>
 
-                    <!-- Confrim Delete Modal -->
-                    <div id="deleteModal" class="modal fade" tabindex="-1" role="dialog"
-                      aria-labelledby="deleteModalTitle" aria-hidden="true">
+                    <!-- Confrim Post Delete Modal -->
+                    <div id="deletePostModal" class="modal fade" tabindex="-1" role="dialog"
+                      aria-labelledby="deletePostModalTitle" aria-hidden="true">
                       <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="deleteModalTitle">Delete Post</h5>
+                            <h5 class="modal-title" id="deletePostModalTitle">Delete Post</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                               <span aria-hidden="true">×</span>
                             </button>
@@ -135,6 +135,31 @@
                               @click="postToDelete = null">Cancel</button>
                             <button type="button" class="btn btn-danger" @click="deletePost()">
                               Delete Post
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <!-- Confrim Comment Delete Modal -->
+                    <div id="deleteCommentModal" class="modal fade" tabindex="-1" role="dialog"
+                      aria-labelledby="deleteCommentModalTitle" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="deleteCommentModalTitle">Delete Comment</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">×</span>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Are you sure you want to delete this comment?</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                              @click="commentToDelete = null">Cancel</button>
+                            <button type="button" class="btn btn-danger" @click="deleteComment()">
+                              Delete Comment
                             </button>
                           </div>
                         </div>
@@ -163,6 +188,7 @@
             totalItems: null,
             posts: [],
             postToDelete: null,
+            commentToDelete: null,
             newPost: {
               text: "",
               image: null,
@@ -336,17 +362,34 @@
             },
             deletePost: async function () {
               try {
-                // console.log("Deleting: ", this.postToDelete)
-
                 let response = await axios.delete(`/api/posts/${this.postToDelete}`)
-                // console.log("Post Deleted from DB")
 
                 this.posts = this.posts.filter(post => {
                   return post._id != this.postToDelete
                 })
 
                 this.postToDelete = null;
-                $('#deleteModal').modal('hide')
+                $('#deletePostModal').modal('hide')
+
+              } catch (error) {
+                console.error(error)
+              }
+            },
+            deleteComment: async function () {
+              console.log("Deleting: ", this.commentToDelete)
+
+              try {
+                let response = await axios.delete(`/api/comments/${this.commentToDelete._id}`)
+
+                let post = this.posts.find(post => post._id == this.commentToDelete.relatedPost)
+                if (post) {
+                  post.comments = post.comments.filter(comment => {
+                    return comment._id != this.commentToDelete._id;
+                  })
+                }
+
+                this.commentToDelete = null;
+                $('#deleteCommentModal').modal('hide')
 
               } catch (error) {
                 console.error(error)
