--- a/views/index.ejs
+++ b/views/index.ejs
@@ -315,14 +315,21 @@
               }
             },
             createComment: async function (postId) {
-              return await axios.post('/api/comments', {
-                relatedPost: postId,
-                content: document.getElementById(postId).value
-              }).then(response => {
-                // console.log("Comment Created Successfully!")
-                // console.log(response)
-                document.getElementById(postId).value = null;
-              })
+              try{
+                this.errorMessage = null;
+
+                return await axios.post('/api/comments', {
+                  relatedPost: postId,
+                  content: document.getElementById(postId).value
+                }).then(response => {
+                  // console.log("Comment Created Successfully!")
+                  // console.log(response)
+                  document.getElementById(postId).value = null;
+                })
+              }catch (error){
+                console.error(error);
+                this.errorMessage = error.response.data.error;
+              }
             },
             loadPosts: async function () {
               if (this.offset > this.totalItems) {
