--- a/views/partials/create-post.ejs
+++ b/views/partials/create-post.ejs
@@ -36,7 +36,7 @@
             <ul class="post-opt-block d-flex align-items-center list-inline justify-content-between m-0 p-0">
                 <a href="javascript:$('#imageInput').click()">
                     <li class="iq-bg-primary rounded p-2 pointer mr-3">
-                        <img src="images/small/07.png" alt="icon" class="img-fluid">&nbsp;Add Photo
+                        <img src="/images/small/07.png" alt="icon" class="img-fluid">&nbsp;Add Photo
 
                         <input id="imageInput" type="file" accept="image/*" @change="previewImage"
                             style="display: none;">
