--- a/public/css/famblr.css
+++ b/public/css/famblr.css
@@ -1,22 +1,80 @@
-/* html, body {
-    height: 100%;
-    min-height: 100vh;
-} */
-
 .famblr-logo {
-    background: rgb(80, 81, 255);
-    background: -moz-linear-gradient(45deg, rgba(80, 81, 255, 1) 0%, rgba(0, 255, 149, 1) 100%);
-    background: -webkit-linear-gradient(45deg, rgba(80, 81, 255, 1) 0%, rgba(0, 255, 149, 1) 100%);
-    background: linear-gradient(45deg, rgba(80, 81, 255, 1) 0%, rgba(0, 255, 149, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#09009f", endColorstr="#00ff95", GradientType=1);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  background: rgb(80, 81, 255);
+  background: -moz-linear-gradient(
+    45deg,
+    rgba(80, 81, 255, 1) 0%,
+    rgba(0, 255, 149, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    45deg,
+    rgba(80, 81, 255, 1) 0%,
+    rgba(0, 255, 149, 1) 100%
+  );
+  background: linear-gradient(
+    45deg,
+    rgba(80, 81, 255, 1) 0%,
+    rgba(0, 255, 149, 1) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#09009f", endColorstr="#00ff95", GradientType=1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .famblr-background {
-    background: rgb(80, 81, 255);
-    background: -moz-linear-gradient(45deg, rgba(80, 81, 255, 1) 0%, rgba(0, 255, 149, 1) 100%);
-    background: -webkit-linear-gradient(45deg, rgba(80, 81, 255, 1) 0%, rgba(0, 255, 149, 1) 100%);
-    background: linear-gradient(45deg, rgba(80, 81, 255, 1) 0%, rgba(0, 255, 149, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#09009f", endColorstr="#00ff95", GradientType=1);
+  background: rgb(80, 81, 255);
+  background: -moz-linear-gradient(
+    45deg,
+    rgba(80, 81, 255, 1) 0%,
+    rgba(0, 255, 149, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    45deg,
+    rgba(80, 81, 255, 1) 0%,
+    rgba(0, 255, 149, 1) 100%
+  );
+  background: linear-gradient(
+    45deg,
+    rgba(80, 81, 255, 1) 0%,
+    rgba(0, 255, 149, 1) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#09009f", endColorstr="#00ff95", GradientType=1);
+}
+
+.famblr-profile-header {
+  display: block;
+  width: 100%;
+  height: 200px;
+  background: rgb(80, 81, 255);
+  background: -moz-linear-gradient(
+    45deg,
+    rgba(80, 81, 255, 1) 0%,
+    rgba(0, 255, 149, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    45deg,
+    rgba(80, 81, 255, 1) 0%,
+    rgba(0, 255, 149, 1) 100%
+  );
+  background: linear-gradient(
+    45deg,
+    rgba(80, 81, 255, 1) 0%,
+    rgba(0, 255, 149, 1) 100%
+  );
+}
+
+.famblr-profile-container {
+  position: relative !important;
+  margin-bottom: -3em !important;
+}
+
+@media only screen and (min-width: 576px) {
+  .famblr-profile-container {
+    margin-bottom: -6em !important;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .famblr-profile-container {
+    margin-bottom: -12em !important;
+  }
 }
