--- a/views/partials/top-navbar.ejs
+++ b/views/partials/top-navbar.ejs
@@ -1,85 +1,85 @@
 <div class="iq-top-navbar">
-    <div class="iq-navbar-custom">
-        <nav class="navbar navbar-expand-lg navbar-light p-0">
-            <div class="iq-navbar-logo d-flex justify-content-between">
+  <div class="iq-navbar-custom">
+    <nav class="navbar navbar-expand-lg navbar-light p-0">
+      <div class="iq-navbar-logo d-flex justify-content-between">
 
-                <a href="/">
-                    <span class="famblr-logo">Famblr</span>
-                </a>
-                <div class="iq-menu-bt align-self-center">
-                    <div class="wrapper-menu">
-                        <div class="main-circle"><i class="ri-menu-line"></i></div>
+        <a href="/">
+          <span class="famblr-logo">Famblr</span>
+        </a>
+        <div class="iq-menu-bt align-self-center">
+          <div class="wrapper-menu">
+            <div class="main-circle"><i class="ri-menu-line"></i></div>
+          </div>
+        </div>
+      </div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
+        <i class="ri-menu-3-line"></i>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto navbar-list">
+          <li>
+            <a v-bind:href="'/profile/' + user.username" class="d-flex align-items-center">
+              <img id="top-nav-profile-pic"
+                v-bind:src="user && user.profilePicture ? `/uploads/${user.profilePicture}` : '/images/profile.png'"
+                class="img-fluid rounded-circle mr-3" alt="user">
+              <div class="caption">
+                <h6 class="mb-0 line-height">
+                  <%= user.firstName %>
+                    <%= user.lastName %>
+                </h6>
+              </div>
+            </a>
+          </li>
+        </ul>
+        <ul class="navbar-list">
+          <li>
+            <a href="#" class="search-toggle d-flex align-items-center">
+              <i class="ri-arrow-down-s-fill"></i>
+            </a>
+            <div class="iq-sub-dropdown iq-user-dropdown">
+              <div class="iq-card shadow-none m-0">
+                <div class="iq-card-body p-0 ">
+                  <div class="bg-primary p-3 line-height">
+                    <h5 class="mb-0 text-white line-height">Hello <%= user.firstName %>
+                        <%= user.lastName %>
+                    </h5>
+                  </div>
+                  <a v-bind:href="'/profile/' + user.username" class="iq-sub-card iq-bg-primary-hover">
+                    <div class="media align-items-center">
+                      <div class="rounded iq-card-icon iq-bg-primary">
+                        <i class="ri-file-user-line"></i>
+                      </div>
+                      <div class="media-body ml-3">
+                        <h6 class="mb-0 ">My Profile</h6>
+                        <p class="mb-0 font-size-12">View profile and post history.</p>
+                      </div>
                     </div>
+                  </a>
+                  <a href="/account" class="iq-sub-card iq-bg-warning-hover">
+                    <div class="media align-items-center">
+                      <div class="rounded iq-card-icon iq-bg-warning">
+                        <i class="ri-profile-line"></i>
+                      </div>
+                      <div class="media-body ml-3">
+                        <h6 class="mb-0 ">Account settings</h6>
+                        <p class="mb-0 font-size-12">Manage your account details.</p>
+                      </div>
+                    </div>
+                  </a>
+                  <div class="d-inline-block w-100 text-center p-3">
+                    <form action="javascript:famblrLogout()">
+                      <button type="submit" class="bg-primary iq-sign-btn" role="button">Sign
+                        out<i class="ri-login-box-line ml-2"></i></a>
+                    </form>
+                  </div>
                 </div>
+              </div>
             </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
-                <i class="ri-menu-3-line"></i>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto navbar-list">
-                    <li>
-                        <a href="/account" class="  d-flex align-items-center">
-                            <img id="top-nav-profile-pic"
-                                v-bind:src="user && user.profilePicture ? `/uploads/${user.profilePicture}` : '/images/profile.png'"
-                                class="img-fluid rounded-circle mr-3" alt="user">
-                            <div class="caption">
-                                <h6 class="mb-0 line-height">
-                                    <%= user.firstName %>
-                                        <%= user.lastName %>
-                                </h6>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-                <ul class="navbar-list">
-                    <li>
-                        <a href="#" class="search-toggle d-flex align-items-center">
-                            <i class="ri-arrow-down-s-fill"></i>
-                        </a>
-                        <div class="iq-sub-dropdown iq-user-dropdown">
-                            <div class="iq-card shadow-none m-0">
-                                <div class="iq-card-body p-0 ">
-                                    <div class="bg-primary p-3 line-height">
-                                        <h5 class="mb-0 text-white line-height">Hello <%= user.firstName %>
-                                                <%= user.lastName %>
-                                        </h5>
-                                    </div>
-                                    <a href="/account" class="iq-sub-card iq-bg-primary-hover">
-                                        <div class="media align-items-center">
-                                            <div class="rounded iq-card-icon iq-bg-primary">
-                                                <i class="ri-file-user-line"></i>
-                                            </div>
-                                            <div class="media-body ml-3">
-                                                <h6 class="mb-0 ">My Profile</h6>
-                                                <p class="mb-0 font-size-12">View profile and post history.</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <a href="/account" class="iq-sub-card iq-bg-warning-hover">
-                                        <div class="media align-items-center">
-                                            <div class="rounded iq-card-icon iq-bg-warning">
-                                                <i class="ri-profile-line"></i>
-                                            </div>
-                                            <div class="media-body ml-3">
-                                                <h6 class="mb-0 ">Account settings</h6>
-                                                <p class="mb-0 font-size-12">Manage your account details.</p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <div class="d-inline-block w-100 text-center p-3">
-                                        <form action="javascript:famblrLogout()">
-                                            <button type="submit" class="bg-primary iq-sign-btn" role="button">Sign
-                                                out<i class="ri-login-box-line ml-2"></i></a>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
 </div>
